# aoc

./: .gitignore  README.md  template.cpp  utils.hpp
2020/: CMakeLists.txt  README.md  run.sh
2020/day1/: day1.cpp
2020/day2/: day2.cpp
2020/day3/: day3.cpp
2020/day4/: day4.cpp
2020/day5/: day5.cpp
2020/day6/: day6.cpp
2020/day7/: day7.cpp
2020/day8/: day8.cpp
2022/: 1.cpp  10.cpp  10_bench.cc  11.cpp  11_bench.cc  12.cpp  12_bench.cc  1_bench.cc  2.cpp  2_bench.cc  3.cpp  3_bench.cc  4.cpp  4_bench.cc  5.cpp  5_bench.cc  6.cpp  6_bench.cc  7.cpp  7_bench.cc  8.cpp  8_bench.cc  9.cpp  9_bench.cc  Makefile  bench.sh  run.sh
